# Mathc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: cpp_test.cpp  example.c  main.c  mat_example.c  matmath_example.c  matrix_type.c  performance_test_call.c  performance_test_lib.c  quat_example.c  test.c  typeless_functions.c  utils_example.c  vec_example.c  vecmath_example.c  vector_type_casting.c  vector_type_usage.c
include/mathc/: LICENSE  bool.h  double.h  float.h  functions.h  int.h  io.h  mat.h  mathc.h  matmath.h  quat.h  typed.h  typed_generic.h  types.h  uchar.h  vec.h  vecmath.h
include/mathc/io/: bio.h  bool.h  bvec2.h  bvec3.h  bvec4.h  bvecn.h  char.h  dio.h  dmat2.h  dmat3.h  dmat4.h  dmatn.h  double.h  dvec2.h  dvec3.h  dvec4.h  dvecn.h  float.h  iio.h  imat2.h  imat3.h  imat4.h  imatn.h  int.h  io.h  ivec2.h  ivec3.h  ivec4.h  ivecn.h  mat2.h  mat3.h  mat4.h  matn.h  terminalcolor.h  uchar.h  ucmat2.h  ucmat3.h  ucmat4.h  ucmatn.h  ucvec2.h  (+8 more)
include/mathc/mat/: cmat2.h  cmat3.h  cmat4.h  cmatn.h  dmat2.h  dmat2_v.h  dmat3.h  dmat3_v.h  dmat4.h  dmat4_v.h  dmatn.h  double.h  float.h  functions.h  generic.h  generic_v.h  imat2.h  imat2_v.h  imat3.h  imat3_v.h  imat4.h  imat4_v.h  imatn.h  int.h  mat2.h  mat2_v.h  mat3.h  mat3_v.h  mat4.h  mat4_v.h  matn.h  typed.h  typed_v.h  uchar.h  ucmat2.h  ucmat3.h  ucmat4.h  ucmatn.h  umat2.h  umat3.h  (+2 more)
include/mathc/publictypes/: bool.h  bvec2.h  bvec3.h  bvec4.h  dmat2.h  dmat3.h  dmat4.h  double.h  dvec2.h  dvec3.h  dvec4.h  float.h  imat2.h  imat3.h  imat4.h  int.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat3.h  mat4.h  uchar.h  ucmat2.h  ucmat3.h  ucmat4.h  ucvec2.h  ucvec3.h  ucvec4.h  vec2.h  vec3.h  vec4.h
include/mathc/quat/: dquat.h  dquat_v.h  quat.h  quat_v.h  typed.h
include/mathc/sca/: bool.h  char.h  double.h  float.h  int.h  longdouble.h  longlong.h  uchar.h  uint.h  ushort.h
include/mathc/types/: bool.h  btypes.h  bvec2.h  bvec3.h  bvec4.h  dmat2.h  dmat3.h  dmat4.h  double.h  dtypes.h  dvec2.h  dvec3.h  dvec4.h  float.h  imat2.h  imat3.h  imat4.h  int.h  itypes.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat3.h  mat4.h  types.h  uchar.h  ucmat2.h  ucmat3.h  ucmat4.h  ucvec2.h  ucvec3.h  ucvec4.h  uint.h  vec2.h  vec3.h  vec4.h
include/mathc/utils/: camera.h  color.h  dcamera.h  dcolor.h  dintersection.h  double.h  dquat.h  drandom.h  drotation.h  float.h  intersection.h  quat.h  random.h  rotation.h
include/mathc/vec/: bool.h  bvec2.h  bvec3.h  bvec4.h  bvecn.h  cvec2.h  cvec3.h  cvec4.h  cvecn.h  double.h  dvec2.h  dvec2_v.h  dvec3.h  dvec3_v.h  dvec4.h  dvec4_v.h  dvecn.h  float.h  functions.h  generic.h  generic_v.h  int.h  ivec2.h  ivec2_v.h  ivec3.h  ivec3_v.h  ivec4.h  ivec4_v.h  ivecn.h  typed.h  typed_generic.h  typed_v.h  uchar.h  ucvec2.h  ucvec3.h  ucvec4.h  ucvecn.h  uvec2.h  uvec3.h  uvec4.h  (+8 more)
template/: create.py  template.py
template/in/: common.h  float.h  int.h  mathc.h
template/in/io/: float.h  matn.h  matx.h  terminalcolor.h  vecX.h  vecn.h
template/in/mat/: float.h  imat2.h  imat3.h  imat4.h  imatX.h  imatn.h  mat2.h  mat3.h  mat4.h  matX.h  matn.h
template/in/publictypes/: bool.h  float.h  int.h  matX.h  vecX.h
template/in/sca/: bool.h  char.h  double.h  float.h  int.h  longdouble.h  longlong.h  short.h  uchar.h  uint.h  ulonglong.h  ushort.h
template/in/types/: bool.h  float.h  int.h  matX.h  vecX.h
template/in/utils/: camera.h  color.h  float.h  intersection.h  quat.h  random.h  rotation.h
template/in/vec/: bvec2.h  bvec3.h  bvec4.h  bvecX.h  bvecn.h  float.h  ivec4X.h  ivecX.h  ivecn.h  ivecnX.h  vec4X.h  vecX.h  vecn.h
